Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66248

REG on macOS: Crash when opening context menu and using freetype engine

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.0 Alpha
    • 5.11.0 Alpha
    • Widgets: Styles
    • None
    • macOS
    • bd80f00f84f60590fb38d98f211ddf4486c88cdb

      Caused by cf7a4016a17615df2952389bae11149a49b151bc.

      When running application with "-platform cocoa:fontengine=freetype" and opening a context menu, it will assert, since the mac style assumes a different font engine.

        For Gerrit Dashboard: QTBUG-66248
        # Subject Branch Project Status CR V

            dedietri Gabriel de Dietrich (drgvond)
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes